--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 			</div>
 			<div id="area-lateral">
-				lateral
+				<img src="img/Jefferson1.png">
 			</div>
 			<!--FIM DO CONTEUDO DA PAG-->
 			<!--rodape-->
