--- a/titulos.html
+++ b/titulos.html
@@ -39,14 +39,14 @@
 
 			<div id="area-post">
 				
-				<div class="postagem">
+				<div class="postagem"><!--abertura post-->
 					<h2>Sobre a História</h2>
 
-				</div>
+				</div><!-- //fim post-->
 
 			</div>
 			<div id="area-lateral">
-				lateral
+				<img src="img/Loco.png">
 			</div>
 			<!--FIM DO CONTEUDO DA PAG-->
 			<!--rodape-->
