--- a/jejum.html
+++ b/jejum.html
@@ -40,13 +40,24 @@
 			<div id="area-post">
 				
 				<div class="postagem">
-					<h2>Sobre a História</h2>
+					<h2>O grande Jejum 1968-1989</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed iaculis quis felis eu congue. Vivamus tempus enim est. Donec hendrerit condimentum sodales. Praesent eget eros et sapien fringilla viverra. Donec aliquam eu sapien eget tristique. Morbi posuere magna at dolor tincidunt ultrices. Fusce nulla augue, elementum et felis non, mattis ornare risus. In id ipsum ipsum. Praesent laoreet, lectus quis maximus congue, justo risus lobortis purus, non rutrum elit lorem non est. Etiam at dolor interdum, sollicitudin orci a, tristique mi. Nullam sapien ante, placerat in tincidunt quis, varius et orci. In luctus lacus vitae dignissim sollicitudin. Sed et pretium metus. Proin gravida in felis et viverra. Cras massa arcu, semper venenatis risus sed, elementum semper arcu.
+					</p>
+					<p>
+						Pellentesque et iaculis ligula. In purus ante, feugiat ut pretium et, sodales at massa. Pellentesque quis tristique nunc. Phasellus non turpis tincidunt, tempor ante nec, venenatis lectus. Etiam ac ex nibh. Proin sed faucibus arcu. Proin imperdiet condimentum dolor, quis ullamcorper ante ultricies a. Sed mollis elementum dignissim. Aliquam at ante tortor. Nunc bibendum urna tincidunt est lacinia, eu egestas nibh tempor. Morbi vel justo libero. Suspendisse viverra rutrum mi, porttitor rhoncus sapien rutrum sed. In ac dolor ut dolor bibendum mattis non ac neque. Nullam pellentesque magna dui, lobortis porttitor nulla sagittis eu.
+					</p>
+
+
+					<p>
+						Donec blandit augue non tortor pellentesque fermentum. Maecenas in dui libero. Nam vulputate, ligula eget molestie vulputate, mauris libero tincidunt massa, nec egestas eros sapien sed neque. Mauris at molestie purus. Vestibulum malesuada sit amet libero at convallis. Nullam efficitur elit at lectus blandit tincidunt. Nam semper eros fermentum viverra vestibulum. Cras imperdiet tellus risus, sit amet fermentum risus porttitor vel. Nunc malesuada tincidunt bibendum. Aliquam a massa in est faucibus porttitor at sed leo. Curabitur hendrerit, orci ac placerat scelerisque, dolor justo hendrerit nibh, nec posuere lectus purus in orci. Mauris quis elit erat. Suspendisse semper eu lacus vel commodo.	
+					</p>
 
 				</div>
 
 			</div>
 			<div id="area-lateral">
-				lateral
+				
 			</div>
 			<!--FIM DO CONTEUDO DA PAG-->
 			<!--rodape-->
