--- a/jejum.html
+++ b/jejum.html
@@ -57,7 +57,7 @@
 
 			</div>
 			<div id="area-lateral">
-				
+				<img src="img/Loco.png">
 			</div>
 			<!--FIM DO CONTEUDO DA PAG-->
 			<!--rodape-->
