--- a/contato.html
+++ b/contato.html
@@ -103,7 +103,7 @@
 
 			</div>
 			<div id="area-lateral">
-				lateral
+				<img src="img/Loco.png">
 			</div>
 			<!--FIM DO CONTEUDO DA PAG-->
 			<!--rodape-->
