--- a/escudo.html
+++ b/escudo.html
@@ -46,7 +46,7 @@
 
 			</div>
 			<div id="area-lateral">
-				lateral
+				<img src="img/Loco.png">
 			</div>
 			<!--FIM DO CONTEUDO DA PAG-->
 			<!--rodape-->
