--- a/escudo.html
+++ b/escudo.html
@@ -42,6 +42,8 @@
 				<div class="postagem">
 					<h2>Sobre a História</h2>
 
+					Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					
 				</div>
 
 			</div>
