--- a/contato.html
+++ b/contato.html
@@ -44,9 +44,9 @@
 					<div align="center">
 						
 						<form>
-                        	<span class="formu">Nome: <input type="name" value="Nome" id="nome" onfocus="if (this.value=='Nome') this.value='';" onblur="if (this.value=='') this.value='Nome'"></span>
+                        	<span class="formu">Nome: <input type="name" value=""placeholder="Nome" id="nome" onfocus="if (this.value=='Nome') this.value='';" onblur="if (this.value=='') this.value='Nome'"></span>
 
-                        	<span class="formu">E-mail: <input type="email" value="E-mail" id="email" onfocus="if (this.value=='E-mail') this.value='';" onblur="if (this.value=='') this.value='E-mail'"></span>
+                        	<span class="formu">E-mail: <input type="email" value=""placeholder="E-mail" id="email" onfocus="if (this.value=='E-mail') this.value='';" onblur="if (this.value=='') this.value='E-mail'"></span>
 
                         	<div class="formu">Estado 
                         		<select>
