--- a/jejum.html
+++ b/jejum.html
@@ -40,7 +40,7 @@
 			<div id="area-post">
 				
 				<div class="postagem">
-					<h2>O grande Jejum 1968-1989</h2>
+					<h2>O Grande Jejum 1968-1989</h2>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed iaculis quis felis eu congue. Vivamus tempus enim est. Donec hendrerit condimentum sodales. Praesent eget eros et sapien fringilla viverra. Donec aliquam eu sapien eget tristique. Morbi posuere magna at dolor tincidunt ultrices. Fusce nulla augue, elementum et felis non, mattis ornare risus. In id ipsum ipsum. Praesent laoreet, lectus quis maximus congue, justo risus lobortis purus, non rutrum elit lorem non est. Etiam at dolor interdum, sollicitudin orci a, tristique mi. Nullam sapien ante, placerat in tincidunt quis, varius et orci. In luctus lacus vitae dignissim sollicitudin. Sed et pretium metus. Proin gravida in felis et viverra. Cras massa arcu, semper venenatis risus sed, elementum semper arcu.
 					</p>
