--- a/idolos.html
+++ b/idolos.html
@@ -95,7 +95,7 @@
 						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
 					</p> <br>
 					<div align="center">
-						<img src="idolos/Zagallo.jpg">
+						<img style="height: 400px" src="idolos/Zagallo.jpg">
 					</div>
 
 					<h3 style="padding: 20px">Amarildo</h3>
@@ -114,12 +114,76 @@
 						<img src="idolos/Manga.jpg">
 					</div>
 
+					<h3 style="padding: 20px">Jairzinho</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="height: 400px" src="idolos/Jairzinho.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Roberto Miranda</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="height: 400px" src="idolos/Roberto Miranda.png">
+					</div>
+
 					<h3 style="padding: 20px">Gerson</h3>
 					<p>
 						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
 					</p> <br>
 					<div align="center">
-						<img src="idolos/Gerson.jpg">
+						<img style="height: 400px" src="idolos/Gerson.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Paulo Cézar Caju</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img src="idolos/Caju.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Afonsinho</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 500px" src="idolos/Afonsinho.jpeg">
+					</div>
+
+					<h3 style="padding: 20px">Nei Conceição</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 400px" src="idolos/Nei.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Carlos Roberto</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 600px" src="idolos/Carlos Roberto.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Nílson Dias</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 400px" src="idolos/Nilson Dias.png">
+					</div>
+
+					<h3 style="padding: 20px">Carlos Alberto Torres</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 300px" src="idolos/Carlos Alberto Torres.jpg">
 					</div>
 
 				</div><!-- //fim post-->
