--- a/idolos.html
+++ b/idolos.html
@@ -186,6 +186,118 @@
 						<img style="width: 300px" src="idolos/Carlos Alberto Torres.jpg">
 					</div>
 
+					<h3 style="padding: 20px">Marinho Chagas</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img src="idolos/Marinho Chagas.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Mendonça</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img src="idolos/Mendonça.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Alemão</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img src="idolos/Alemão.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Maurício</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img src="idolos/Mauricio.jpeg">
+					</div>
+
+					<h3 style="padding: 20px">Mauro Galvão</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 300px" src="idolos/Mauro Galvao.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Wilson Gottardo</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 400px" src="idolos/Gottardo.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Paulinho Criciúma</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 450px" src="idolos/Paulinho Criciuma.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Gonçalves</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 450px" src="idolos/Gonçalves.jpeg">
+					</div>
+
+					<h3 style="padding: 20px">Wagner</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 420px" src="idolos/Wagner.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Sérgio Manoel</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img src="idolos/Sergio Manoel.png">
+					</div>
+
+					<h3 style="padding: 20px">Túlio Maravilha</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img style="width: 600px" src="idolos/Tulio.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Sandro</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img src="idolos/Sandro.jpeg">
+					</div>
+
+					<h3 style="padding: 20px">Loco Abreu</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img src="idolos/Loco.jpg">
+					</div>
+
+					<h3 style="padding: 20px">Jefferson</h3>
+					<p>
+						Pellentesque at tempus tellus. Curabitur dui sapien, vehicula ac ligula sit amet, porttitor molestie orci. Suspendisse eu turpis auctor, malesuada magna sed, dapibus nisl. Maecenas lobortis rutrum venenatis. Quisque accumsan tortor et egestas dictum. Aliquam tempus ex augue, eu fermentum nulla fringilla et. Sed leo justo, aliquam et suscipit ultricies, accumsan id nisi. Sed eget molestie leo, non pellentesque quam. Praesent ut nunc volutpat, vestibulum turpis vel, feugiat arcu. Donec egestas enim quis dictum suscipit. Aliquam rhoncus, felis sed imperdiet volutpat, justo dui varius libero, a ultricies est orci a metus. Mauris non nibh euismod, pharetra odio quis, ultricies enim. Nullam consequat iaculis lacus ac egestas. Aenean porta tellus ac augue consequat tempus.
+					</p> <br>
+					<div align="center">
+						<img src="idolos/Jefferson.jpeg">
+					</div>
+					
 				</div><!-- //fim post-->
 
 			</div>
